--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
   
-  <link rel="stylesheet" type="text/css" href="http://www.terkaj.com/tswnavbar.css">
+  <link rel="stylesheet" type="text/css" href="https://terkaj.com/tswnavbar.css">
 
   
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>terkaj.com - home</title>
