--- a/ontology.html
+++ b/ontology.html
@@ -7,7 +7,7 @@
 
 
   
-  <link rel="stylesheet" type="text/css" href="http://www.terkaj.com/tswnavbar.css">
+  <link rel="stylesheet" type="text/css" href="https://terkaj.com/tswnavbar.css">
 
   
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>terkaj.com - ontology</title></head><body style="width: 1187px;" class="">
