--- a/publ.html
+++ b/publ.html
@@ -9,7 +9,7 @@
 
 
   
-  <link rel="stylesheet" type="text/css" href="http://www.terkaj.com/tswnavbar.css">
+  <link rel="stylesheet" type="text/css" href="https://terkaj.com/tswnavbar.css">
 
   
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>terkaj.com - publications</title></head><body style="width: 1186px;" class="">
