--- a/publ.html
+++ b/publ.html
@@ -52,12 +52,12 @@ WOS indexed</big></big><br style="font-weight: normal;">
 Sacco M, Terkaj W, Tolio T (2012) An HLA-based distributed simulation
 for networked manufacturing systems analysis. Journal of Simulation,
 6(4):237-252. ISSN: 1747-7786. <a href="http://dx.doi.org/10.1057/jos.2012.6">doi:10.1057/jos.2012.6</a>&nbsp;<a href="publications/2012_PedrielliSaccoTerkajTolio.bib">BibTeX</a>&nbsp;<a target="_blank" href="https://www.researchgate.net/profile/Walter_Terkaj/publication/237062690_An_HLA-based_distributed_simulation_for_networked_manufacturing_systems_analysis/links/54f045c20cf2432ba6598854.pdf?origin=publication_detail&amp;ev=pub_int_prw_xdl&amp;msrp=OKPI5uPRIpsHG2eziLXJq2JSDKZKX7zgh6G-YKl2Xu1CeNpUwk98Si3dPKgpw9N2whXLBUhqsH8WxnHMfKgigQ.EIT-ZG6Y7tomZPxApeFY2fsHlE6D-wBlu9MpqV76LKs0ab31lCUGYx4dY6FzdzLRaGHBwjJBBcA0dL5AyQ2iUQ._PbHIr4jWdc_hrSifpk6ybvslOBXZauKQOP7mhQdbhQ87d4ZGarLOcEiaI4lSMXrN2gpwDJszecRNVU4vmiB9Q"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a> </li>
-        <li><a name="2013_KadarTerkajSacco"></a>Kádár B, Terkaj W,
+        <li><a name="2013_KadarTerkajSacco"></a>K&#225;d&#225;r B, Terkaj W,
 Sacco M (2013) Semantic Virtual Factory supporting interoperable
 modelling and evaluation of production systems. CIRP Annals
 Manufacturing Technology, 62(1):443-446. ISSN: 0007-8506. <a href="http://dx.doi.org/10.1016/j.cirp.2013.03.045">doi:10.1016/j.cirp.2013.03.045</a>
           <a href="publications/2013_KadarTerkajSacco.bib">BibTeX</a> <a href="https://www.researchgate.net/profile/Walter_Terkaj/publication/237089885_Semantic_Virtual_Factory_supporting_interoperable_modelling_and_evaluation_of_production_systems/links/54f042f10cf25f74d724de8e.pdf?origin=publication_detail&amp;ev=pub_int_prw_xdl&amp;msrp=go5kJX8VKOQoNVfqamn8rVXgjtPSkqrm8pgviGVZ3Z2dZWj3Vu16aFUuT-8xhxUkp6wDi9eYX5FdDVjSdfmoLg.-ZkqTJDHoUknr0M4BWDnHZvjICeTu2zB0Uivr96GGj8_7xDEtQP_1uYHCu9P4u07N7j3_oVNnyulTGfZOw7-GA.0mtPtee_UcJAO5pbE2QDKEYIWc09sbg8o_SDCgYGBTDH3rH7iba2UiSpRM2qEGfurYmQUDTKZeN7ARl2ouo8ZA" target="_blank"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a></li>
-        <li>Ghielmini G, Pedrazzoli P, Rovere D, Terkaj W, Boër CR, Dal
+        <li>Ghielmini G, Pedrazzoli P, Rovere D, Terkaj W, Bo&#235;r CR, Dal
 Maso G, Milella F, Sacco M (2013) Virtual Factory Manager for semantic
 data handling. CIRP Journal of Manufacturing Science and Technology,
 6(4):281-291. <a href="http://dx.doi.org/10.1016/j.cirpj.2013.08.001" target="_blank">doi:10.1016/j.cirpj.2013.08.001</a> <a href="https://www.researchgate.net/profile/Walter_Terkaj/publication/259165498_Virtual_Factory_Manager_for_semantic_data_handling/links/54f04e500cf2495330e57fd9.pdf?origin=publication_detail&amp;ev=pub_int_prw_xdl&amp;msrp=uw_6mxCzNKmp4skR5Ggnjttc3qa84VNZ5u-CyYf5nAXb6DjySggA7sPU5LomANZ_1yVbDKloCHPnyJuXoV_s8g.ghh48_gPGYwREeCXhkmadFQCu_1msceq1TIUEeW3U7LG7H7D_DkBROYbkFr3VfzIk2Vpf1CJizdwzexGgcGWsw.gNcWDBwHEID2XEtMsWeBoAHW3wCsn-pZXIL3jUdwZ8Q8t2ZyPHkcN4F5ThE2Cv8llGq4kZmtDE23Kb0ESi2z_g"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a></li>
@@ -283,13 +283,13 @@ Manufacturing Systems in uncertain environment. Proceedings of the 6th
 CIRP International Conference on Intelligent Computation in
 Manufacturing Engineering, Naples, Italy, 23-25 July 2007: 155-160.
 ISBN 978-88-900948-7-3.&nbsp; </li>
-        <li style="font-weight: normal;">Terkaj W, Tolio T, Váncza J
+        <li style="font-weight: normal;">Terkaj W, Tolio T, V&#225;ncza J
 (2009) Rolling Horizon
 Stochastic Programming Approach to Designing Focused Flexible
 Manufacturing Systems. Proceedings of the 7th International Conference
 on Manufacturing Research, Coventry, UK, 8-10 September 2009:
 234-241.&nbsp; </li>
-        <li style="font-weight: normal;">Terkaj W, Tolio T, Váncza J
+        <li style="font-weight: normal;">Terkaj W, Tolio T, V&#225;ncza J
 (2009) Multi-stage Stochastic
 Programming for Manufacturing System Design. Proceedings of the 3rd
 International Conference on Changeable, Agile, Reconfigurable and
@@ -344,8 +344,8 @@ Terkaj W, Sacco M, Suciu O
 the 14th International Conference on Modern Information Technology in
 the Innovation Processes of industrial enterprises, Budapest, Hungary,
 24-26 October, 2012.&nbsp; </li>
-        <li style="font-weight: normal;">Terkaj W, Urgo M, Kádár B,
-Popovics G, Kemény L (2012)
+        <li style="font-weight: normal;">Terkaj W, Urgo M, K&#225;d&#225;r B,
+Popovics G, Kem&#233;ny L (2012)
 Modeling and simulation of production systems supported by a Virtual
 Factory Framework. Proceedings of the 14th International Conference on
 Modern Information Technology in the Innovation Processes of industrial
@@ -434,7 +434,7 @@ Product Lifecycle Management for Digital Transformation of Industries:
 13th IFIP WG 5.1 International Conference, PLM 2016, Columbia, SC, USA,
 July 11-13, 2016, Springer International Publishing, 134-145. <a href="https://dx.doi.org/10.1007/978-3-319-54660-5_13" target="_blank">doi:10.1007/978-3-319-54660-5_13</a></li>
         <li style="font-weight: normal;">Kuts V, Modoni GE, Terkaj W,
-Tähemaa T, Sacco M, Otto T (2017) Exploiting Factory Telemetry to
+T&#228;hemaa T, Sacco M, Otto T (2017) Exploiting Factory Telemetry to
 Support Virtual Reality Simulation in Robotics Cell. In: De Paolis L.,
 Bourdot P., Mongelli A. (eds) Augmented Reality, Virtual Reality, and
 Computer Graphics. AVR 2017. Lecture Notes in Computer Science, vol
@@ -446,7 +446,7 @@ Computer Graphics. AVR 2017. Lecture Notes in Computer Science, vol
 Reconfigurable Transportation Systems. Proceedings of the 2017
 Federated Conference on Computer Science and Information Systems. <a href="http://dx.doi.org/10.15439/2017F154" target="_blank">doi:10.15439/2017F154</a><a style="font-weight: normal;" href="https://www.researchgate.net/publication/320012297_Answer_Set_Programming_for_Modeling_and_Reasoning_on_Modular_and_Reconfigurable_Transportation_Systems"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a></li>
         <li style="font-weight: normal;"><a name="2017_TerkajVigano"></a>Terkaj
-W, Viganò GP (2017) Semantic GIOVE-VF: an Ontology-based Virtual
+W, Vigan&#242; GP (2017) Semantic GIOVE-VF: an Ontology-based Virtual
 Factory Tool. Proceedings of the Workshop Data Meets Applied
 Ontologies, Joint Ontology Workshops 2017, CEUR Workshop Proceedings,
 vol. 2050.<a style="font-weight: normal;" href="https://www.researchgate.net/publication/320078018_Semantic_GIOVE-VF_an_Ontology-based_Virtual_Factory_Tool"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a></li>
@@ -467,7 +467,7 @@ Workshop Formal Ontologies Meet Industry, Joint Ontology Workshops
         <li style="font-weight: normal;">Sanfilippo E, Terkaj W (2019)
 Editorial: Formal Ontologies meet Industry. Procedia Manufacturing,
 28:174&#8211;176<a style="font-weight: normal;" href="https://www.researchgate.net/publication/330669923_Editorial_Formal_Ontologies_meet_Industry"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a></li>
-        <li style="font-weight: normal;">Schneider GF, Peßler GA,
+        <li style="font-weight: normal;">Schneider GF, Pe&#223;ler GA,
 Terkaj W (2019) Knowledge-based Conversion of Finite State Machines in
 Manufacturing Automation. Procedia Manufacturing, 28:189-194 <a style="font-weight: normal;" href="https://www.researchgate.net/publication/330669640_Knowledge-based_Conversion_of_Finite_State_Machines_in_Manufacturing_Automation"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a></li>
         <li style="font-weight: normal;">Modoni GE, Caldarola EG, Sacco
@@ -504,7 +504,7 @@ Distributed Computing in Sensor Systems (DCOSS), 512-519. <a href="https://doi.o
         <li style="font-weight: normal;">Terkaj W, Borgo S, Sanfilippo
 EM (2022) Ontology for Industrial Engineering: A DOLCE Compliant
 Approach. CEUR Workshop Proceedings, vol. 3240 <a style="font-weight: normal;" href="http://ceur-ws.org/Vol-3240/paper2.pdf"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a></li>
-        <li style="font-weight: normal;">Pauwels P, Poveda-Villalón M,
+        <li style="font-weight: normal;">Pauwels P, Poveda-Villal&#243;n M,
 Terkaj W (2022) Proceedings of the 10th Linked Data in Architecture and
 Construction Workshop (LDAC 2022) - Editorial. CEUR Workshop
 Proceedings, 3213:3&#8211;5 <a style="font-weight: normal;" href="http://ceur-ws.org/Vol-3213/preface.pdf"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a>
