--- a/tools.html
+++ b/tools.html
@@ -125,7 +125,7 @@ manage spatialized sounds, create gameplays and more. </span></span><span style=
       <br></span><span style="font-weight: normal;">Related
 publications:</span><span style="font-weight: normal;"></span><br style="font-weight: normal;">
       <ul>
-        <li><span style="font-weight: normal;"><a target="_blank" href="publ.html#2013_KadarTerkajSacco">Kádár B, Terkaj W, Sacco M
+        <li><span style="font-weight: normal;"><a target="_blank" href="publ.html#2013_KadarTerkajSacco">K&#225;d&#225;r B, Terkaj W, Sacco M
 (2013)</a> Semantic Virtual Factory supporting interoperable modelling
 and evaluation of production systems. </span><br>
         </li>
