--- a/tools.html
+++ b/tools.html
@@ -134,7 +134,7 @@ A virtual factory approach for in situ simulation to support production
 and maintenance planning.&nbsp;</span></li>
         
         <li style="font-weight: normal;"><a target="_blank" href="publ.html#2017_TerkajVigano">Terkaj
-W, Viganò GP (2017)</a> Semantic GIOVE-VF: an Ontology-based Virtual
+W, Vigan&#242; GP (2017)</a> Semantic GIOVE-VF: an Ontology-based Virtual
 Factory Tool</li>
         <li style="font-weight: normal;"><a target="_blank" href="publ.html#2022_UrgoTerkajMondelliniColombo">Urgo M, Terkaj, Mondellini M, Colombo G (2022)</a> Design of
 serious games in engineering education: An application to the
