--- a/ontology.html
+++ b/ontology.html
@@ -49,7 +49,7 @@ related publications.</span><span style="font-weight: normal;"><br>
       </span> <br>
       <big>ifcOWL</big><span style="font-weight: normal;"><br>
       </span><span style="font-weight: normal;">OWL ontology </span><span style="font-weight: normal;">automatically converted from
-the <a href="http://www.buildingsmart-tech.org/specifications/ifc-releases/summary" target="_blank">IFC EXPRESS schema</a> as agreed by the </span><a style="font-weight: normal;" href="http://www.buildingsmart-tech.org/future/linked-data/linked-data" target="_blank">Linked Data Working Group</a><span style="font-weight: normal;"> of </span><a style="font-weight: normal;" href="http://www.buildingsmart-tech.org/" target="_blank">buldingSMART International</a><span style="font-weight: normal;">.</span><br>
+the <a href="https://technical.buildingsmart.org/standards/ifc/ifc-formats/ifcowl/" target="_blank">IFC EXPRESS schema</a>.</span><br>
       <ul>
         <li style="font-weight: normal;"><a target="_blank" href="https://standards.buildingsmart.org/IFC/DEV/IFC4/FINAL/OWL/index.html">documentation</a></li>
         <li><a href="https://standards.buildingsmart.org/IFC/DEV/IFC4/FINAL/OWL/IFC4.rdf" target="_blank"><span style="font-weight: normal;">.owl</span></a></li>
@@ -64,7 +64,7 @@ needed to model data related to descriptive statistics and probability
 distributions.</span> <br>
 <ul>
         
-        <li><a style="font-weight: bold;" href="http://www.ontoeng.com/statistics/statistics.owl" target="_blank"><span style="font-weight: normal;">.owl</span></a></li>
+        <li><a style="font-weight: bold;" href="https://w3id.org/ontoeng/statistics" target="_blank"><span style="font-weight: normal;">.owl</span></a></li>
       </ul>
       <br><big>
 EXPRESS Ontology</big><br>
@@ -74,7 +74,7 @@ that can be used to support the conversion of an EXPRESS schema into an
 OWL ontology, as shown in the ifcOWL ontology.</span><br>
       <ul>
         <li style="font-weight: normal;"><a href="https://w3id.org/express" target="_blank">documentation</a></li>
-        <li><a style="font-weight: bold;" href="https://users.ugent.be/%7Epipauwel/ontologies/express_W3ID/20151211/express.owl" target="_blank"><span style="font-weight: normal;">.owl</span></a></li>
+        <li><a style="font-weight: bold;" href="https://pi.pauwel.be/evoc/express_W3ID/20151211/express.owl" target="_blank"><span style="font-weight: normal;">.owl</span></a></li>
       </ul>
       <br>
       <br>
