--- a/publ.html
+++ b/publ.html
@@ -253,7 +253,12 @@ Terkaj W (eds) Factories of the Future. Springer, Cham: 433-474. <a href="https:
 for Factories of the Future&#8212;Part II: Pilot Plants and Funding
 Mechanisms. In: Tolio T, Copani G, Terkaj W (eds) Factories of the
 Future. Springer, Cham: 475-494. <a href="https://doi.org/10.1007/978-3-319-94358-9_21" target="_blank">doi:10.1007/978-3-319-94358-9_21</a><a href="https://www.researchgate.net/publication/331105474_Key_Research_Priorities_for_Factories_of_the_Future-Part_II_Pilot_Plants_and_Funding_Mechanisms"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a></li>
-        <li>Terkaj W, Annoni M, Olarte Martinez B, Pessot E, Sortino M,
+        
+<li style="font-weight: normal;">Compagno F, Borgo S, Sanfilippo EM, Terkaj W (2023) Manufacturing Resources, Capabilities, and Engineering Functions: Towards an Ontology-Based Integration. 
+        In: 
+        Aussenac-Gilles N, Hahmann T, Galton A, Hedblom MM (2023) Formal Ontology in Information Systems - Proceedings of the 13th International Conference (FOIS 2023). 
+        IOS Press Ebooks: 272-287.  <a href="https://doi.org/10.3233/FAIA231134" target="_blank">doi:10.3233/FAIA231134</a>  </li>
+<li>Terkaj W, Annoni M, Olarte Martinez B, Pessot E, Sortino M,
 Urgo M (2024) Digital Twin for Factories: Challenges and Industrial
 Applications. In: Carrino L, Galantucci LM, Settineri L (eds) Selected
 Topics in Manufacturing. Lecture Notes in Mechanical Engineering.
@@ -503,16 +508,21 @@ Opportunities. Proceedings of 17th International Conference on
 Distributed Computing in Sensor Systems (DCOSS), 512-519. <a href="https://doi.org/10.1109/DCOSS52077.2021.00084" target="_blank">doi:10.1109/DCOSS52077.2021.00084</a></li>
         <li style="font-weight: normal;">Terkaj W, Borgo S, Sanfilippo
 EM (2022) Ontology for Industrial Engineering: A DOLCE Compliant
-Approach. CEUR Workshop Proceedings, vol. 3240 <a style="font-weight: normal;" href="http://ceur-ws.org/Vol-3240/paper2.pdf"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a></li>
-        <li style="font-weight: normal;">Pauwels P, Poveda-Villal&#243;n M,
-Terkaj W (2022) Proceedings of the 10th Linked Data in Architecture and
-Construction Workshop (LDAC 2022) - Editorial. CEUR Workshop
-Proceedings, 3213:3&#8211;5 <a style="font-weight: normal;" href="http://ceur-ws.org/Vol-3213/preface.pdf"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a>
-        </li>
+Approach. CEUR Workshop Proceedings, vol. 3240 <a style="font-weight: normal;" href="http://ceur-ws.org/Vol-3240/paper2.pdf"><img
+                style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF"
+                src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a></li>
+<li style="font-weight: normal;">Pauwels P, Poveda-Villal&#243;n M,
+        Terkaj W (2022) Proceedings of the 10th Linked Data in Architecture and
+        Construction Workshop (LDAC 2022) - Editorial. CEUR Workshop
+        Proceedings, 3213:3&#8211;5 <a style="font-weight: normal;" href="http://ceur-ws.org/Vol-3213/preface.pdf"><img
+                        style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF"
+                        src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a>
+</li>
 
-      </ul>
-      <br>
-      <br>
+
+</ul>
+<br>
+<br>
       <br>
       <br>
       <br>
