--- a/publ.html
+++ b/publ.html
@@ -518,7 +518,10 @@ Approach. CEUR Workshop Proceedings, vol. 3240 <a style="font-weight: normal;" h
                         style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF"
                         src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a>
 </li>
-
+<li style="font-weight: normal;">Terkaj W, Pessot E, Kuts V, Bondarenko Y, Pizzagalli SL, Kleine K (2024) 
+        A framework for the design and use of virtual labs in digital engineering education. 
+        AIP Conference Proceedings, 2989(1):030003. <a href="https://doi.org/10.1063/5.0189669" target="_blank">doi:10.1063/5.0189669</a> <a style="font-weight: normal;" href="https://pubs.aip.org/aip/acp/article-pdf/doi/10.1063/5.0189669/19075329/030003_1_5.0189669.pdf"><img style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF" src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a>  </li>
+        
 
 </ul>
 <br>
