--- a/publ.html
+++ b/publ.html
@@ -333,10 +333,15 @@
                                                                 target="_blank">doi:10.1016/j.jclepro.2023.136838</a>&nbsp;
                                                         <br>
                                                 </li>
-                                                <li >Terkaj W, Kleine K, Kuts V (2024)
+                                                <li>Urgo M, Terkaj W, Simonetti G (2024) Monitoring Manufacturing
+                                                        Systems using AI: a Method based on a Digital Factory Twin to
+                                                        train CNNs on Synthetic Data. CIRP
+                                                        Journal of Manufacturing Science and Technology, in press.
+                                                </li>
+                                                <li>Terkaj W, Kleine K, Kuts V (2024)
                                                         Virtual Labs for Higher Education in Industrial Engineering.
                                                         Proceedings of the Estonian Academy of
-                                                        Sciences, in press  </li>
+                                                        Sciences, in press. </li>
                                         </ul>
 
                                         <br>
@@ -692,13 +697,13 @@
                                                 <li style="font-weight: normal;">Aameri B, Poveda-Villal&#243;n M,
                                                         Sanfilippo E, Terkaj W (2024) Special Issue on Semantic Web for
                                                         Industrial Engineering: Research and Applications. Semantic Web,
-                                                        15(2):1&#8211;7 
+                                                        15(2):1&#8211;7
                                                         <!-- <a style="font-weight: normal;" href=""><img
                                                                         style="border: 0px solid ; width: 24px; height: 24px;"
                                                                         alt="PDF"
                                                                         src="images/Adobe_PDF_file_icon_24x24.png"
                                                                         align="top"></a> -->
-                                                                </li>
+                                                </li>
                                         </ul>
 
                                         <br style="font-weight: normal;">
