--- a/publ.html
+++ b/publ.html
@@ -342,7 +342,7 @@
                                                         Virtual Labs for Higher Education in Industrial Engineering.
                                                         Proceedings of the Estonian Academy of
                                                         Sciences, in press. </li>
-                                        </ul> 
+                                        </ul>
 
                                         <br>
                                         <big><big>Articles in</big></big><big><big style="font-weight: bold;">
@@ -698,11 +698,14 @@
                                                         Sanfilippo E, Terkaj W (2024) Special Issue on Semantic Web for
                                                         Industrial Engineering: Research and Applications. Semantic Web,
                                                         15(2):1&#8211;7
-                                                        <!-- <a style="font-weight: normal;" href=""><img
+                                                        <a href="https://doi.org/10.3233/SW-243623"
+                                                                target="_blank">doi:10.3233/SW-243623</a>
+                                                        <a
+                                                                href="https://content.iospress.com/download/semantic-web/sw243623?id=semantic-web%2Fsw243623"><img
                                                                         style="border: 0px solid ; width: 24px; height: 24px;"
                                                                         alt="PDF"
                                                                         src="images/Adobe_PDF_file_icon_24x24.png"
-                                                                        align="top"></a> -->
+                                                                        align="top"></a>
                                                 </li>
                                         </ul>
 
