--- a/publ.html
+++ b/publ.html
@@ -336,7 +336,15 @@
                                                 <li>Urgo M, Terkaj W, Simonetti G (2024) Monitoring Manufacturing
                                                         Systems using AI: a Method based on a Digital Factory Twin to
                                                         train CNNs on Synthetic Data. CIRP
-                                                        Journal of Manufacturing Science and Technology, in press.
+                                                        Journal of Manufacturing Science and Technology, 50:249-268.
+                                                        <a href="https://doi.org/10.1016/j.cirpj.2024.03.005"
+                                                                target="_blank">doi:10.1016/j.cirpj.2024.03.005</a> <a
+                                                                style="font-weight: normal;"
+                                                                href="https://www.sciencedirect.com/science/article/pii/S1755581724000361/pdfft?md5=9367de29c3c31b4b7cb60d9a4027c53e&pid=1-s2.0-S1755581724000361-main.pdf"><img
+                                                                        style="border: 0px solid ; width: 24px; height: 24px;"
+                                                                        alt="PDF"
+                                                                        src="images/Adobe_PDF_file_icon_24x24.png"
+                                                                        align="top"></a> <br>                                                        
                                                 </li>
                                                 <li>Terkaj W, Kleine K, Kuts V (2024)
                                                         Virtual Labs for Higher Education in Industrial Engineering.
