--- a/publ.html
+++ b/publ.html
@@ -659,7 +659,12 @@
                                                         International Conference (FOIS 2023).
                                                         IOS Press Ebooks: 272-287. <a
                                                                 href="https://doi.org/10.3233/FAIA231134"
-                                                                target="_blank">doi:10.3233/FAIA231134</a> </li>
+                                                                target="_blank">doi:10.3233/FAIA231134</a> <a
+                                                                href="https://www.researchgate.net/publication/376738505_Manufacturing_Resources_Capabilities_and_Engineering_Functions_Towards_an_Ontology-Based_Integration"><img
+                                                                        style="border: 0px solid ; width: 24px; height: 24px;"
+                                                                        alt="PDF"
+                                                                        src="images/Adobe_PDF_file_icon_24x24.png"
+                                                                        align="top"></a></li>
                                                 <li>Terkaj W, Annoni M, Olarte Martinez B, Pessot E, Sortino M,
                                                         Urgo M (2024) Digital Twin for Factories: Challenges and
                                                         Industrial
