--- a/publ.html
+++ b/publ.html
@@ -735,6 +735,17 @@
                                                                         src="images/Adobe_PDF_file_icon_24x24.png"
                                                                         align="top"></a>
                                                 </li>
+
+                                                <li style="font-weight: normal;">Pauwels P, Poveda-Villal&#243;n M, Terkaj W, 
+                                                        (2024) Proceedings of the 12th Linked Data in
+                                                        Architecture and
+                                                        Construction Workshop (LDAC 2024) - Editorial. CEUR Workshop
+                                                        Proceedings, 3824:4&#8211;7 <a style="font-weight: normal;"
+                                                                href="https://ceur-ws.org/Vol-3824/preface.pdf"><img
+                                                                        style="border: 0px solid ; width: 24px; height: 24px;"
+                                                                        alt="PDF"
+                                                                        src="images/Adobe_PDF_file_icon_24x24.png"
+                                                                        align="top"></a></li>                                                
                                         </ul>
 
                                         <br style="font-weight: normal;">
@@ -1298,6 +1309,12 @@
                                                                         src="images/Adobe_PDF_file_icon_24x24.png"
                                                                         align="top"></a> </li>
 
+                                                <li style="font-weight: normal;">                    
+                                                        Porello D, Vieu L, Terkaj W, Borgo S, Compagno F, Sanfilippo EM (2024) DOLCE in OWL: The core theory. CEUR Workshop Proceedings, vol. 3882
+                                                                <a style="font-weight: normal;"
+                                                                href="https://ceur-ws.org/Vol-3882/foust-1.pdf"><img
+                                                                        style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF"
+                                                                        src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a> </li>
                                         </ul>
                                         <br>
                                         <br>
