--- a/publ.html
+++ b/publ.html
@@ -364,6 +364,25 @@
                                                                 style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF"
                                                                 src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a> <br>
                                                 </li>
+                                                <li>Urgo M, Terkaj W (2025) Integrating Digital Factory Twin and AI for Monitoring Manufacturing Systems through Synthetic Data Generation and Vision Transformers. 
+                                                        CIRP Annals Manufacturing
+                                                        Technology, 74(1), in press. ISSN: 0007-8506.&nbsp;<a class="doi"
+                                                                href="https://doi.org/10.1016/"
+                                                                target="_blank" rel="noreferrer noopener"
+                                                                aria-label="Persistent link using digital object identifier"
+                                                                title="Persistent link using digital object identifier">doi:10.1016/</a>
+                                                        <a style="font-weight: normal;"
+                                                                href=".pdf"><img
+                                                                        style="border: 0px solid ; width: 24px; height: 24px;"
+                                                                        alt="PDF"
+                                                                        src="images/Adobe_PDF_file_icon_24x24.png"
+                                                                        align="top"></a>&nbsp;<a class="doi"
+                                                                href="https://doi.org/10.1016/"
+                                                                target="_blank" rel="noreferrer noopener"
+                                                                aria-label="Persistent link using digital object identifier"
+                                                                title="Persistent link using digital object identifier"></a><span
+                                                                style="text-decoration: underline;"> </span>
+                                                </li>                                                
 
                                                 </ul>
                                                 
