--- a/publ.html
+++ b/publ.html
@@ -364,6 +364,8 @@
                                                                 style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF"
                                                                 src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a> <br>
                                                 </li>
+                                                <li>Urgo M, Terkaj W (2025) Integrating Digital Factory Twin and AI for Monitoring Manufacturing Systems through Synthetic Data Generation and Vision Transformers. CIRP Annals Manufacturing Technology, 74(1), in press. ISSN: 0007-8506.                                                  
+                                                </li>                                                
 
                                                 </ul>
                                                 
