--- a/publ.html
+++ b/publ.html
@@ -361,7 +361,17 @@
                                                                 style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF"
                                                                 src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a> <br>
                                                 </li>
-                                                <li>Urgo M, Terkaj W (2025) Integrating Digital Factory Twin and AI for Monitoring Manufacturing Systems through Synthetic Data Generation and Vision Transformers. CIRP Annals Manufacturing Technology, 74(1), in press. ISSN: 0007-8506.                                                  
+                                                <li>Urgo M, Terkaj W (2025) Integrating Digital Factory Twin and AI for Monitoring Manufacturing Systems 
+                                                        through Synthetic Data Generation and Vision Transformers. 
+                                                        CIRP Annals Manufacturing Technology, 74(1), in press. ISSN: 0007-8506.
+                                                        <a href="https://doi.org/10.1016/j.cirp.2025.04.037"
+                                                                target="_blank">doi:10.1016/j.cirp.2025.04.037</a> <a
+                                                                style="font-weight: normal;"
+                                                                href="https://www.sciencedirect.com/science/article/pii/S0007850625000848/pdfft?md5=7ef65ae3ba19503a1570a8bbbcec3c58&pid=1-s2.0-S0007850625000848-main.pdf"><img
+                                                                        style="border: 0px solid ; width: 24px; height: 24px;"
+                                                                        alt="PDF"
+                                                                        src="images/Adobe_PDF_file_icon_24x24.png"
+                                                                        align="top"></a> <br>  
                                                 </li>  
 
                                                 
