--- a/publ.html
+++ b/publ.html
@@ -1325,6 +1325,13 @@
                                                                 href="https://ceur-ws.org/Vol-3882/foust-1.pdf"><img
                                                                         style="border: 0px solid ; width: 24px; height: 24px;" alt="PDF"
                                                                         src="images/Adobe_PDF_file_icon_24x24.png" align="top"></a> </li>
+
+                                                <li style="font-weight: normal;">     
+                                                        Mondellini M, Arlati S, Urgo M, Pizzagalli S, Mahmood K, Terkaj W (2025) Comparing Traditional and eXtended Reality-Based Learning: Effects on Performance, Emotions, and Cognitive Aspects. 
+                                                        In: De Paolis LT, Arpaia P, Sacco M (eds) Extended Reality. XR Salento 2025. Lecture Notes in Computer Science, vol. 15742. Springer, Cham.
+                                                        <a href="https://doi.org/10.1007/978-3-031-97778-7_24" target="_blank">doi:10.1007/978-3-031-97778-7_24</a> </li>
+
+                                                                        
                                         </ul>
                                         <br>
                                         <br>
