--- a/publ.html
+++ b/publ.html
@@ -363,7 +363,7 @@
                                                 </li>
                                                 <li>Urgo M, Terkaj W (2025) Integrating Digital Factory Twin and AI for Monitoring Manufacturing Systems 
                                                         through Synthetic Data Generation and Vision Transformers. 
-                                                        CIRP Annals Manufacturing Technology, 74(1), in press. ISSN: 0007-8506.
+                                                        CIRP Annals Manufacturing Technology, 74(1):639-643. ISSN: 0007-8506.
                                                         <a href="https://doi.org/10.1016/j.cirp.2025.04.037"
                                                                 target="_blank">doi:10.1016/j.cirp.2025.04.037</a> <a
                                                                 style="font-weight: normal;"
@@ -372,8 +372,16 @@
                                                                         alt="PDF"
                                                                         src="images/Adobe_PDF_file_icon_24x24.png"
                                                                         align="top"></a> <br>  
-                                                </li>  
-
+                                                </li> 
+												<li>Peila R, Varesano A, Vineis C, Tonetti C, Terkaj W (2025) Carmine natural dyeing of chitosan-treated cotton: statistical analysis to enhance energy saving and environmental impact. Cellulose, in press
+												<a href="https://doi.org/10.1007/s10570-025-06747-w" target="_blank">doi:10.1007/s10570-025-06747-w</a>
+												<a style="font-weight: normal;"
+                                                                href="https://link.springer.com/content/pdf/10.1007/s10570-025-06747-w.pdf"><img
+                                                                        style="border: 0px solid ; width: 24px; height: 24px;"
+                                                                        alt="PDF"
+                                                                        src="images/Adobe_PDF_file_icon_24x24.png"
+                                                                        align="top"></a> <br> 
+												</li>
                                                 
                                                 </ul>
                                                 
