--- a/publ.html
+++ b/publ.html
@@ -373,7 +373,7 @@
                                                                         src="images/Adobe_PDF_file_icon_24x24.png"
                                                                         align="top"></a> <br>  
                                                 </li> 
-												<li>Peila R, Varesano A, Vineis C, Tonetti C, Terkaj W (2025) Carmine natural dyeing of chitosan-treated cotton: statistical analysis to enhance energy saving and environmental impact. Cellulose, in press
+												<li>Peila R, Varesano A, Vineis C, Tonetti C, Terkaj W (2025) Carmine natural dyeing of chitosan-treated cotton: statistical analysis to enhance energy saving and environmental impact. Cellulose, in press.
 												<a href="https://doi.org/10.1007/s10570-025-06747-w" target="_blank">doi:10.1007/s10570-025-06747-w</a>
 												<a style="font-weight: normal;"
                                                                 href="https://link.springer.com/content/pdf/10.1007/s10570-025-06747-w.pdf"><img
